--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 
 <body>
  <div class="login">
-	<h1>Prediction for Lead Status Dataset</h1>
+	<h1>Lead Conversion Prediction Model</h1>
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
